sunco-infrastructure-terraform/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: sunco-service

spec:
  selector:
    app: sunco

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  type: NodePort
